load("//tools/lint:lint.bzl", "add_lint_tests")
load(":workspace_test.bzl", "workspace_test")
load(":test.bzl",
    "get_workspace_files",
    "import_workspace_files",
)

import_workspace_files()

external_data_files = [
    "//tools/external_data:all_files",
]

workspace_test(
    name = "bazel_pkg_test",
    anchor = "bazel_pkg_test_anchor",
    data = [
        "bazel_pkg_test_all_files",
    ] + external_data_files,
)

workspace_files = get_workspace_files()
# Why is this a constraint???
# https://github.com/bazelbuild/bazel/blob/master/src/main/java/com/google/devtools/build/lib/analysis/LocationExpander.java#L273

add_lint_tests(
    bazel_lint_extra_srcs = [
        ":external_data_bazel_lint_files",
    ],
    python_lint_extra_srcs = [
        ":external_data_python_lint_files",
    ],
)
