load("//tools/lint:lint.bzl", "add_lint_tests")
load(":workspace_test.bzl", "workspace_test")
load(
    ":test_workspaces.bzl",
    "collect_all_lint_files",
)

upstream_files = [
    "//tools/external_data:all_files_recursive",
]

workspace_test(
    name = "external_data_bazel_pkg_test",
    anchor = "@external_data_bazel_pkg_test//:WORKSPACE",
    data = [
        "@external_data_bazel_pkg_test//:all_files_recursive",
    ] + upstream_files,
)

collect_all_lint_files()

add_lint_tests(
    bazel_lint_extra_srcs = [
        ":all_bazel_lint_files",
    ],
    python_lint_extra_srcs = [
        ":all_python_lint_files",
    ],
)
