# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools:lint.bzl", "add_lint_tests")

# Expose this package's main bits to be consumed via a test.
filegroup(
    name = "root_data",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "src",
        "tools",
    ],
    visibility = ["//test:__pkg__"],
)

add_lint_tests()
