# -*- python -*-

package(default_visibility = ["//visibility:public"])

# Expose this package's main bits to be consumed via a test.
filegroup(
    name = "meta_testing_files",
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "src",
        "tools",
    ],
    visibility = ["//test:__pkg__"],
)
