load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/install:install.bzl", "install")
load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
    "drake_transitive_installed_hdrs_filegroup",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_unittest",
)

package(default_visibility = ["//tools/install:__subpackages__"])

drake_cc_library(
    name = "dummy",
    srcs = ["dummy.cc"],
    hdrs = ["dummy.h"],
)

drake_cc_binary(
    name = "libdummy.so",
    linkshared = 1,
    linkstatic = 1,
    deps = [":dummy"],
)

drake_transitive_installed_hdrs_filegroup(
    name = "libdummy_headers",
    deps = [":dummy"],
)

py_library(
    name = "dummy_py",
    srcs = ["dummy.py"],
)

install(
    name = "dummy_install",
    testonly = 1,
    targets = [
        ":dummy_py",
        ":libdummy.so",
    ],
    hdrs = [":libdummy_headers"],
    data = ["README.md"],
    data_dest = "share",
)

add_lint_tests(
    enable_install_lint = False,
    enable_library_lint = False,
)
