# -*- python -*-

load("@drake//tools/skylark:drake_py.bzl", "drake_py_library")
load("//tools/lint:lint.bzl", "add_lint_tests")

exports_files(
    ["drake_visualizer.py"],
    visibility = ["//tools:__pkg__"],
)

# When developing within Drake, we don't want //tools:drake_visualizer to
# depend on the entire pydrake library, because that adds a dependency on a
# whole bunch of C++ code that is irrelevant for the visualizer.  So, here we
# provide a small stub version of pydrake with only getDrakePath implemented
# (the only piece drake_visualizer needs).  Note that the installed version of
# drake-visualizer *does* use the installed (full) version of pydrake -- this
# is development-sandbox-only stub.
py_library(
    name = "stub_pydrake",
    srcs = ["stub/pydrake/__init__.py"],
    visibility = ["//tools:__pkg__"],
)

drake_py_library(
    name = "drake_scripts_py",
    srcs = ["drake_scripts.py"],
    visibility = ["//tools:__pkg__"],
    deps = [
        "//attic/multibody/rigid_body_plant:director_scripts_py",
        "//systems/sensors/visualization:director_scripts_py",
    ],
)

add_lint_tests()
