# -*- python -*-

load(
    "@drake//tools:install.bzl",
    "cmake_config",
    "install",
    "install_cmake_config",
)
load(
    "@drake//tools:drake.bzl",
    "drake_shared_cc_library",
    "drake_shared_cc_library_install_targets",
)

package(
    default_visibility = ["//visibility:public"],
)

drake_shared_cc_library(
    name = "fmt",
    srcs = glob(["fmt/*.cc"]),
    hdrs = glob(["fmt/*.h"]),
    includes = ["."],
)

cmake_config(
    package = "fmt",
    script = "@drake//tools/workspace/fmt:fmt-create-cps.py",
    version_file = "CMakeLists.txt",
)

install_cmake_config(package = "fmt")  # Creates rule :install_cmake_config.

install(
    name = "install",
    targets = drake_shared_cc_library_install_targets("fmt"),
    hdr_dest = "include/fmt",
    hdr_strip_prefix = ["fmt"],
    guess_hdrs = "PACKAGE",
    docs = ["LICENSE.rst"],
    deps = [":install_cmake_config"],
)
