# -*- python -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
)

licenses([
    "notice",  # BSD-2-Clause AND BSD-3-Clause AND MIT AND Python-2.0
    "unencumbered",  # Public-Domain
])

# Interpret `numpy` sources as data to simplify handling.
filegroup(
    name = "data",
    srcs = glob(["numpy/**/*"]),
    visibility = ["//visibility:private"],
)

py_library(
    name = "numpy_py",
    imports = ["."],
    visibility = ["//visibility:public"],
    data = [":data"],
)

install_test_src = "@drake//tools/workspace/numpy:test/numpy_install_test.py"

install(
    name = "install",
    data = [":data"],
    install_tests = [install_test_src],
    data_dest = "lib/python2.7/site-packages",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "install_test_data",
    data = [install_test_src],
    testonly = 1,
)
