# -*- python -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
    "external_cc_library",
    "external_cc_library_install_targets",
)

package(default_visibility = ["//visibility:public"])

# Lets other packages inspect the CMake code, e.g., for the version number.
filegroup(
    name = "cmakelists_with_version",
    srcs = ["octomap/CMakeLists.txt"],
)

# Generates octomath library
external_cc_library(
    name = "octomath",
    srcs = glob([
        "octomap/src/math/*.cpp",
    ]),
    hdrs = glob([
        "octomap/include/octomap/math/*.h*",
    ]),
    includes = ["octomap/include"],
)

# Generates the library exported to users.  The explicitly listed srcs= matches
# upstream's explicitly listed sources.  The globbed hdrs= matches upstream's
# explicitly globbed headers.
external_cc_library(
    name = "octomap",
    srcs = [
        "octomap/src/AbstractOcTree.cpp",
        "octomap/src/AbstractOccupancyOcTree.cpp",
        "octomap/src/ColorOcTree.cpp",
        "octomap/src/CountingOcTree.cpp",
        "octomap/src/OcTree.cpp",
        "octomap/src/OcTreeNode.cpp",
        "octomap/src/OcTreeStamped.cpp",
        "octomap/src/Pointcloud.cpp",
        "octomap/src/ScanGraph.cpp",
    ],
    hdrs = glob([
        "octomap/include/octomap/*.h*",
    ]),
    includes = ["octomap/include"],
    deps = [":octomath"],
)

install(
    name = "install",
    targets = (
        external_cc_library_install_targets("octomap") +
        external_cc_library_install_targets("octomath")
    ),
    hdr_dest = "include",
    hdr_strip_prefix = ["octomap/include"],
    guess_hdrs = "PACKAGE",
    docs = ["octomap/LICENSE.txt"],
)
