# -*- python -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
    "external_cc_library",
    "external_cc_library_install_targets",
)

package(default_visibility = ["//visibility:public"])

external_cc_library(
    name = "tinydir",
    hdrs = ["tinydir.h"],
    includes = ["."],
)

# We do not install the header file (its a private dependency), but we still
# need to install its license file.
install(
    name = "install",
    targets = external_cc_library_install_targets("tinydir"),
    docs = ["COPYING"],
)
