# -*- python -*-

load(
    "@drake//tools/install:install.bzl",
    "cmake_config",
    "install",
    "install_cmake_config",
    "external_cc_library",
    "external_cc_library_install_targets",
)

package(
    default_visibility = ["//visibility:public"],
)

external_cc_library(
    name = "tinyobjloader",
    srcs = [
        "tiny_obj_loader.cc",
    ],
    hdrs = [
        "tiny_obj_loader.h",
    ],
    includes = ["."],
)

cmake_config(
    package = "tinyobjloader",
    script = "@drake//tools/workspace/tinyobjloader:package-create-cps.py",
    version_file = "CMakeLists.txt",
)

# Creates rule :install_cmake_config.
install_cmake_config(package = "tinyobjloader")

install(
    name = "install",
    targets = external_cc_library_install_targets("tinyobjloader"),
    hdr_dest = "include/tinyobjloader",
    guess_hdrs = "PACKAGE",
    docs = ["LICENSE"],
    deps = [":install_cmake_config"],
)
