load("//drake/bindings/pydrake:pybind.bzl",
    "drake_pybind_library",
    "get_drake_pybind_installs",
    "get_pybind_dest",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_test",
)
load("@drake//tools/install:install.bzl", "install")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/workspace/mosek:mosek.bzl", "mosek_test_tags")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/workspace/gurobi:gurobi.bzl", "gurobi_test_tags")
load("//tools/workspace/mosek:mosek.bzl", "mosek_test_tags")

package(default_visibility = ["//drake/bindings/pydrake:__subpackages__"])

PY_IMPORTS = ["drake/bindings"]
PY_PKG_INSTALL = "pydrake/solvers"

drake_py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    deps = [
        "//drake/bindings/pydrake:common_py",
    ],
)

drake_pybind_library(
    name = "ik_py",
    cc_devel_deps = [
        "//drake/multibody:inverse_kinematics",
    ],
    cc_srcs = ["ik_py.cc"],
    py_srcs = ["ik.py"],
    py_pkg_install = PY_PKG_INSTALL,
)

drake_pybind_library(
    name = "mathematicalprogram_py",
    cc_srcs = ["mathematicalprogram_py.cc"],
    py_srcs = ["mathematicalprogram.py"],
    cc_devel_deps = [
        "//drake/solvers:mathematical_program",
    ],
    cc_deps = [
        "//drake/bindings/pydrake:symbolic_types_py",
    ],
    py_deps = [
        "//drake/bindings/pydrake:symbolic_py",
    ],
    py_pkg_install = PY_PKG_INSTALL,
)

drake_pybind_library(
    name = "gurobi_py",
    cc_devel_deps = [
        "//drake/solvers:gurobi_solver",
    ],
    cc_srcs = ["gurobi_py.cc"],
    cc_so_name = "gurobi",
    py_pkg_install = PY_PKG_INSTALL,
)

drake_pybind_library(
    name = "ipopt_py",
    cc_devel_deps = [
        "//drake/solvers:ipopt_solver",
    ],
    cc_srcs = ["ipopt_py.cc"],
    cc_so_name = "ipopt",
    py_pkg_install = PY_PKG_INSTALL,
)

drake_pybind_library(
    name = "mosek_py",
    cc_devel_deps = [
        "//drake/solvers:mosek_solver",
    ],
    cc_srcs = ["mosek_py.cc"],
    cc_so_name = "mosek",
    py_pkg_install = PY_PKG_INSTALL,
)

drake_py_library(
    name = "solvers",
    deps = [
        ":ik_py",
        ":mathematicalprogram_py",
        ":gurobi_py",
        ":ipopt_py",
        ":mosek_py",
    ],
)

install(
    name = "install",
    targets = [
        ":module_py",
    ],
    py_dest = get_pybind_dest(PY_PKG_INSTALL),
    deps = get_drake_pybind_installs([
        ":ik_py",
        ":mathematicalprogram_py",
        ":gurobi_py",
        ":ipopt_py",
        ":mosek_py",
    ]),
)

drake_py_test(
    name = "mathematical_program_gurobi_solver_test",
    size = "small",
    srcs = ["test/gurobi_solver_test.py"],
    main = "test/gurobi_solver_test.py",
    tags = gurobi_test_tags(),
    deps = ["//drake/bindings/pydrake"],
)

drake_py_test(
    name = "mathematical_program_ipopt_solver_test",
    size = "small",
    srcs = ["test/ipopt_solver_test.py"],
    args = select({
        "//tools:no_ipopt": ["TestIpoptSolver.unavailable"],
        "//conditions:default": [],
    }),
    main = "test/ipopt_solver_test.py",
    deps = ["//drake/bindings/pydrake"],
)

drake_py_test(
    name = "mathematical_program_mosek_solver_test",
    size = "small",
    srcs = ["test/mosek_solver_test.py"],
    main = "test/mosek_solver_test.py",
    tags = mosek_test_tags(),
    deps = ["//drake/bindings/pydrake"],
)

drake_py_test(
    name = "mathematical_program_test",
    size = "small",
    srcs = ["test/mathematicalprogram_test.py"],
    main = "test/mathematicalprogram_test.py",
    tags = gurobi_test_tags(),
    deps = ["//drake/bindings/pydrake"],
)

drake_py_test(
    name = "pr2ik_test",
    size = "small",
    srcs = ["test/pr2_ik_test.py"],
    data = ["//drake/examples/pr2:models"],
    main = "test/pr2_ik_test.py",
    tags = ["snopt"],
    deps = ["//drake/bindings/pydrake"],
)

drake_py_test(
    name = "rbtik_test",
    size = "small",
    srcs = ["test/rbt_ik_test.py"],
    data = ["//drake/examples/pendulum:models"],
    main = "test/rbt_ik_test.py",
    tags = ["snopt"],
    deps = ["//drake/bindings/pydrake"],
)

add_lint_tests()
