# -*- python -*-

load("@drake//tools/external_data:expose_files.bzl", "expose_files")
load(
    "@drake//tools/external_data:external_data.bzl",
    "external_data_stub_test",
)

external_data_stub_test()

expose_files(sub_packages = ["tools"])

# For use as anchor.
exports_files(
    srcs = "WORKSPACE",
    visibility = ["//visibility:public"],
)
